Minor tweaks across the codebase and slides. Added explicit commons-codec version to avoid vulnerability in transitive dependency for rest-assured.